# tea-pillar

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gcloudignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  pyproject.toml
backend/scripts/: __init__.py  local_smoke_local_model_fallback.py  prefetch_hf_models.py
backend/src/: __init__.py  app.py  config.py  dependencies.py  exceptions.py  logging_config.py
backend/src/clients/: __init__.py  gemini.py  model_service.py  storage_signer.py  veo.py
backend/src/domain/: __init__.py  statuses.py
backend/src/models/: __init__.py  external.py  firestore.py  internal.py  request.py  response.py
backend/src/repositories/: __init__.py  firestore.py  local_templates.py
backend/src/routers/: __init__.py  feedback.py  generate.py  health.py  reaction.py
backend/src/services/: __init__.py  orchestrator.py  session_policy.py
backend/src/services/bandit/: __init__.py  base.py  repository.py  thompson.py  ucb.py
backend/src/services/cat_model/: __init__.py  client.py  image_preprocessor.py  input_image_uploader.py  schemas.py
backend/src/services/fallback_templates/: __init__.py  loader.py
backend/src/services/firestore/: __init__.py  client.py
backend/src/services/gemini/: __init__.py  client.py  prompt_builder.py  query_gen.prompty
backend/src/services/rate_limit/: __init__.py  dependencies.py  policies.py  service.py
backend/src/services/reward_analysis/: __init__.py  service.py
backend/src/services/state_key/: __init__.py  builder.py
backend/src/services/storage/: __init__.py  reaction_video.py
backend/src/services/veo/: __init__.py  client.py  signed_url.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_app_routes.py  test_feedback_route.py  test_generate_route.py  test_orchestrator.py  test_reaction_route.py
backend/tests/unit/: __init__.py  test_bandit_repository.py  test_cat_model_client.py  test_config.py  test_exceptions.py  test_fallback_template_loader.py  test_firestore_client.py  test_gemini_client.py  test_logging_config.py  test_model_input_image_uploader.py  test_orchestrator_fallback.py  test_prompt_builder.py  test_rate_limit_service.py  test_request_models.py  test_reward_analysis_service.py  test_session_policy.py  test_signed_url.py  test_state_key_builder.py  test_thompson.py  test_ucb.py  test_veo_client.py  test_vertex_image_preprocessor.py
docs/: IMPLEMENTATION.md  README.md  READMEen.md  task_distribution_backend.md
docs/en/: Backend_Design.md  High_Level_Design.md  INFRASTRUCTURE.md  MODELING.md  Requirements_Definition.md  idea.md
docs/ja/: Backend_Design.md  Fronted_Desgin.md  Frontend_UI_API_Spec.md  High_Level_Design.md  INFRASTRUCTURE.md  MODELING.md  README.md  Requirements_Definition.md  idea.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: GenerationContext.tsx
infra/: README.md
infra/apigateway/: openapi.yaml
infra/firestore_initial_setup/: README.md  seed_firestore.py  templates.json
model/: CLOUD_RUN_DEPLOY.md  Dockerfile  HUGGINGFACE_PUBLISHING.md  README.md  __init__.py  pyproject.toml
model/artifacts/: README.md  bandit_params.json  clip_prompts.json  feature_columns.json  feature_schema.json  query_mapping.json  reward_formula.json  reward_regressor.joblib  training_metadata.json  video_id_mapping.json
model/scripts/: __init__.py  build_bandit_bootstrap_artifacts.py  build_modeling_v2_artifacts.py  build_regression_training_table.py  extract_context_features.py  extract_reward_labels.py  local_smoke_predict.py  local_smoke_predictor_init.py  prefetch_hf_models.py  prepare_training_dataset.py  publish_artifacts_to_huggingface.py  train_reward_regressor.py
model/src/: __init__.py  app.py  artifacts.py  dependencies.py  feature_extractor.py  predictor.py  rate_limit.py  regressor.py  reward_analyzer.py  schemas.py
model/src/reward/: __init__.py  gaze_estimator.py  paw_detector.py  video_io.py
model/src/routers/: __init__.py  analyze_reward.py  health.py  predict.py  root.py
model/tests/: __init__.py  conftest.py  test_app.py
scripts/deploy_ML/: build_and_push_model.sh  deploy_model_to_vertex.sh  deploy_vertex_model.sh  export_pattern_b_artifacts.py
(+85 files in other folders)
